# star-growth

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  scrolling_github_stars.py
.github/workflows/: publish.yml
star_growth/: __init__.py  cli.py  config.py  generator.py  github.py
tests/: test_generator_helpers.py
